# MINI_STUDENT_DATABASE

./: .adminfile.txt  .error_file  CMakeLists.txt  README.md  admin_operations.c  admin_operations.h  data_structure.c  data_structure.h  functions.h  input.txt  query_lang.c  query_lang.h  stdfx.h  student_marks_system.c
